<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="0dp" >

        <TextView
            android:id="@+id/lblTitle"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/app_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="5dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/name"
                android:paddingLeft="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/spinnerxml"
                android:hint=" Enter Resident Name.."/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/flatNo"
                android:background="@drawable/spinnerxml"
                android:hint="--Select Flat No.--"
                android:layout_marginTop="10sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/category"
                android:background="@drawable/spinnerxml"
                android:hint="--Select Category--"
                android:layout_marginTop="10sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/mobileno"
                android:layout_marginTop="10sp"
                android:inputType="number"
                android:padding="10sp"
                android:background="@drawable/spinnerxml"
                android:hint=" Enter Mobile No"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:paddingRight="10dp" >

            <ImageView
                android:id="@+id/imgFinger"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:background="@drawable/imagefinger"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:src="@drawable/finger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15sp">

                    <Button
                        android:id="@+id/btnInit"
                        style="@style/buttonbig2"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/Init" />

                    <Button
                        android:id="@+id/btnUninit"
                        style="@style/buttonbig2"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/UnInit" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10sp">

                    <Button
                        android:id="@+id/btnSyncCapture"
                        style="@style/buttonbig2"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/SyncCapture" />

                    <Button
                        android:id="@+id/btnStopCapture"
                        style="@style/buttonbig2"
                        android:background="@drawable/button"
                        android:onClick="onControlClicked"
                        android:text="@string/StopSyncCapture"
                        android:visibility="gone"/>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cbFastDetection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Fast Finger Detection"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:visibility="gone"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/btnMatchISOTemplate"
                style="@style/buttonbig2"
                android:background="@drawable/button"
                android:onClick="onControlClicked"
                android:text="@string/MatchISO" />

            <Button
                android:id="@+id/btnExtractISOImage"
                style="@style/buttonbig2"
                android:background="@drawable/button"
                android:onClick="onControlClicked"
                android:text="EXTRACT ISO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/btnExtractAnsi"
                style="@style/buttonbig2"
                android:background="@drawable/button"
                android:onClick="onControlClicked"
                android:text="EXTRACT ANSI" />

            <Button
                android:id="@+id/btnExtractWSQImage"
                style="@style/buttonbig2"
                android:background="@drawable/button"
                android:onClick="onControlClicked"
                android:text="EXTRACT WSQ" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblMessage"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/message"
            android:gravity="center"
            android:padding="5dp"
            android:text=""
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEventLog"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.70"
            android:background="@drawable/message"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:text=""
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnClearLog"
            style="@style/buttonfull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="onControlClicked"
            android:text="@string/ClearLog" />
    </LinearLayout>

</LinearLayout>